chore: Auto merge PRs made by CI Bot
Add status-check job

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,21 @@ on:
   pull_request:
 
 jobs:
+  status-check:
+    runs-on: ubuntu-latest
+    needs: [test-bot]
+    if: always()
+    steps:
+      - name: Check job results
+        env:
+          JOB_RESULTS: ${{ join(needs.*.result, ',') }}
+        run: |
+          if [[ ${JOB_RESULTS} == *"failure"* || ${JOB_RESULTS} == *"cancelled"* ]]; then
+              exit 1
+          else
+              exit 0
+          fi
+
   test-bot:
     strategy:
       matrix:
@@ -37,3 +52,20 @@ jobs:
 
       - run: brew test-bot --only-tap-syntax
       - run: brew test-bot --only-formulae
+        if: github.event_name == 'pull_request'
+     
+  merge-pr:
+    runs-on: ubuntu-latest
+    needs: [status-check]
+    if: github.event_name == 'pull_request' && github.event.pull_request.user.type == 'Bot'
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Approve PR
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh pr review --approve
+      - name: Enable Auto-merge for PR
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh pr merge --auto --rebase
